--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -34,6 +34,7 @@ body,
   height: 100%;
   width: 300px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  overflow: scroll;
 
   ul {
     list-style: none;
